# 2025_Haghighi_Mito

./: .envrc  .gitignore  CLAUDE.md  Justfile  LICENSE  PROGRESS.md  README.md  Snakefile  check_VS_lists.ipynb  data_download_analysis.md  feat_importance.ipynb  flake.nix  manuscript.md  pyproject.toml  set_enrichment_analysis.ipynb
data/processed/tables/: CDRP_screen_results.xlsx  README.md  jump_crispr_screen_results.xlsx  lincs_screen_results_NEW.xlsx  taorf_screen_results.xlsx  taorf_screen_results_NEW.xlsx
data/processed/tables/curated_2024-08-11/: CDRP_screen_results.xlsx  jump_crispr_screen_results.xlsx  jump_orf_screen_results.xlsx  lincs_screen_results.xlsx  taorf_screen_results.xlsx
data/processed/tables/curated_2025-10-25/: jump_crispr_screen_results.xlsx  jump_orf_screen_results.xlsx  lincs_screen_results.xlsx
data/processed/virtual_screen_module/: CDRP_diagnostic_summary.csv  CDRP_diagnostic_summary.txt  jump_compound_diagnostic_summary.csv  jump_compound_diagnostic_summary.txt  jump_crispr_diagnostic_summary.csv  jump_crispr_diagnostic_summary.txt  jump_orf_diagnostic_summary.csv  jump_orf_diagnostic_summary.txt  lincs_diagnostic_summary.csv  lincs_diagnostic_summary.txt  taorf_diagnostic_summary.csv  taorf_diagnostic_summary.txt
docs/: DATA_DOWNLOAD.md  DATA_FLOW.md  PROGRESS.md
haghighi_mito/: __init__.py  cli.py  config.py  data.py  diagnostics.py  vectorized_slope.py  vectorized_stats.py  virtual_screen.py
haghighi_mito/tests/: __init__.py  test_vectorized_slope.py  test_vectorized_stats.py
notebooks/: 1.0-mh-feat-importance.py  2.0-mh-virtual-screen-minimal.py  2.0-mh-virtual-screen-original.py  2.0-mh-virtual-screen.ipynb  2.0-mh-virtual-screen.py  2.1-mh-set-enrichment-analysis.py  2.2-mh-check-vs-lists.py  diagnose.py  explore.py  test-import.py
pipelines/: README.md  analysis_bethac07_radial_entropy_batch.cppipe  analysis_with_images.cppipe  analysis_with_images_batch.cppipe  analysis_with_images_batch_cp3.cppipe  analysis_with_images_cp3.cppipe  analysis_with_images_radial_cp3.cppipe  images.cppipe  neurons_segmentation_CPA.cppipe  oligodendrocytes.cppipe  qc.cppipe  qc_100images.cppipe  qc_batch.cppipe  radialdistribution.cppipe  radialdistribution.txt  radialdistribution_images.cppipe  test.cppipe  test.csv
pipelines/dapi_mito_actin_fibroblasts_40x/: analysis.cppipe  analysis_without_batchfile.cppipe  illum_without_batchfile.cppipe
pipelines/pipeline_2023_by_Erin/: Mito_analysis_batch1.cppipe  Mito_analysis_batch2.cppipe  Mito_segment.cppipe  Mito_segment2.cppipe  Mito_segment3.cppipe
protocols/: McleanCollectionFibroblastGrowthProtocol.md  workflows.md
results/: KEGG_2021_Human_table.txt  WikiPathways_2024_Human_table.txt  jump_orf_screen_results.xlsx
scripts/: check-baseline-quick.sh  check_restore_status.sh  download_data.sh  generate-dag.sh  reproduce_slope_discrepancy.py  test-hypothesis.sh
tests/scipy_version_test/: .gitignore  README.md  pyproject.toml  scipy116_output.txt  scipy14_output.txt  test_savgol.py
