[project]
name = "2025-haghighi-mito"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "blitzgsea>=1.3.54",
    "hdmedians>=0.14.2",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.44",
    "statsmodels>=0.14.5",
]
