[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["haghighi_mito*"]

[project]
name = "2025-haghighi-mito"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "blitzgsea>=1.3.54",
    "duckdb>=1.4.1",
    "hdmedians>=0.14.2",
    "ipykernel>=7.0.1",
    "jupyter>=1.1.1",
    "jupytext>=1.17.3",
    "loguru>=0.7.3",
    "marimo>=0.17.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "polars>=1.34.0",
    "python-dotenv>=1.1.1",
    "scienceplots>=2.1.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "singlecell-morph",
    "snakemake>=9.13.2",
    "sqlalchemy>=2.0.44",
    "sqlglot>=27.27.0",
    "statsmodels>=0.14.5",
]

[tool.uv.sources]
singlecell-morph = { git = "https://github.com/shntnu/SingleCell_Morphological_Analysis.git" }

[tool.ruff]
line-length = 300
target-version = "py312"

[tool.ruff.lint]
# Enable common linting rules
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import sorting)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules that are common in notebooks
ignore = [
    "E402",  # Module level import not at top of file (common in notebooks)
    "E703",  # Statement ends with semicolon (used in notebooks to suppress output)
    "F401",  # Imported but unused (common in notebooks with cells)
    "F841",  # Local variable assigned but never used
    "N816",  # Variable name should be lowercase (common in notebooks)
    "N806",  # Variable in function should be lowercase (common in notebooks)
    "N802",  # Function name should be lowercase (common in notebooks)
    "N803",  # Argument name should be lowercase (common in notebooks)
    "B018",  # Found useless expression. (common in notebooks)
    "N817",  # 
    "SIM108",  # Use ternary operator instead of if-else statement (common in notebooks)
]

[tool.ruff.lint.per-file-ignores]
# Ignore all import-related issues in notebooks
"notebooks/*.py" = ["E402", "F401", "F841", "E703"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
